# torch-wheel-index

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/torch_wheel_index/: __init__.py  __main__.py  _client.py  _parser.py  _scraper.py  cli.py  models.py  paths.py  pipeline.py  serialization.py
