[project]
name = "torch-wheel-index"
version = "0.2.0"
description = "Discover and catalog PyTorch wheel availability across CUDA, ROCm, XPU, and CPU sub-indexes"
readme = "README.md"
authors = [
    { name = "Ben Elfner", email = "belfner@belfner.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Utilities",
]
dependencies = [
    "packaging>=22.0",
]

[project.urls]
Homepage = "https://github.com/belfner/torch-wheel-index"
Repository = "https://github.com/belfner/torch-wheel-index"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "I001",   # Import block is unsorted/unformatted (we manage imports manually)
    "TC001",  # Move application imports into type-checking blocks
    "TC002",  # Move third-party imports into type-checking blocks
    "TC003",  # Move standard library imports into type-checking blocks
    "SIM105", # Use contextlib.suppress - prefer explicit try/except for clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_decorators = false
files = ["src"]

[project.scripts]
torch-wheel-index = "torch_wheel_index.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]
